Fixed bug spacing, container-sm class not aligning

--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ body {
 
 .container-sm {
   margin-left: 490px;
-  width: 850px;
+  width: 840px;
 }
 
 .filters h1 {
